fix: 🐛 get rid of overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -44,16 +44,14 @@ ol[role="list"] {
 }
 
 body {
-  min-height: 100vh;
   line-height: 1.5;
 
-  margin-left: 1.5rem;
-  margin-top: 1.5rem;
+  padding-left: 1.5rem;
+  padding-top: 1.5rem;
 
   font-family: var(--font-paragraph);
   background-color: var(--bg-color);
   color: var(--text-color);
-  padding: 20px;
 }
 
 h1,
